[ADD] Banner section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="container">
-            <nav class="menu">
+            <nav class="menu fixed-width">
                 <div class="menu-items">
                     <ul>
                         <li><a href="#">Home</a></li>
@@ -26,12 +26,37 @@
                     </ul>
                 </div>
                 <div class="btn">
-                    <div class="login-icon">
-                        <i class="fas fa-sign-in-alt"></i>
+                    <div class="login-btn">
+                        <div class="btn-icon">
+                            <i class="fas fa-sign-in-alt"></i>
+
+                        </div>
+                        <a href="#" class="btn-text">Login</a>
                     </div>
-                    <h2 class="login-text">Login</h2>
                 </div>
             </nav>
+            <div class="banner">
+                <div class="banner-details">
+                    <h1>Conmebol</h1>
+                    <h1>Copa America</h1>
+                    <h1>2021</h1>
+
+                    <div class="btn">
+                        <div class="banner-btn">
+                            <a href="#" class="btn-text">Watch Live</a>
+                            <div class="-icon">
+                                <i class="fas fa-arrow-right"></i>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="banner-image">
+                    <img src="images/banner.png" alt="">
+                </div>
+            </div>
         </div>
     </header>
 </body>
