--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 </head>
 
 <body>
-    <header>
-        <div class="container">
+    <main>
+        <!-------------------------
+             Header section starts
+            ---------------------->
+        <header>
             <nav class="menu fixed-width">
                 <div class="menu-items">
                     <ul>
@@ -35,6 +38,11 @@
                     </div>
                 </div>
             </nav>
+
+            <!--------------------------
+                 Banner section starts 
+                ------------------------>
+
             <div class="banner">
                 <div class="banner-details">
                     <h1>Conmebol</h1>
@@ -57,8 +65,149 @@
                     <img src="images/banner.png" alt="">
                 </div>
             </div>
-        </div>
-    </header>
+            <!-- Banner Section end 
+                ----------------------->
+        </header>
+        <!-- Header section end
+            ---------------------->
+
+        <!---------------------------
+             Player section starts
+        --------------------------->
+        <section class="players-section">
+            <div class="players">
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-2.png" alt="">
+                    </div>
+                    <div class="player-profile">
+                        <div class="player-name">Lionel Messi</div>
+                        <div class="player-details">Lionel Andrés Messi is an Argentine professional footballer who
+                            plays as a forward or an attacking midfielder and captains the Argentina national team.
+                        </div>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-3.png" alt="">
+                    </div>
+                    <div class="player-profile">
+                        <div class="player-name">Cristiano Ronaldo</div>
+                        <div class="player-details">Cristiano Ronaldo is a Portuguese
+                            professional footballer who plays as a forward for Serie A club Juventus and captains the
+                            Portugal national team.</div>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-1.png" alt="">
+                    </div>
+                    <div class="player-profile">
+                        <div class="player-name">Neymar Jr</div>
+                        <div class="player-details">Neymar da Silva Santos Júnior, is a Brazilian
+                            professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the
+                            Brazil national team.</div>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-8.png" alt="">
+                    </div>
+                    <div class="player-profile">
+                        <div class="player-name">Kylian Mbappe</div>
+                        <div class="player-details">Kylian Mbappé Lottin is a French professional footballer who plays
+                            as a forward for Ligue 1 club Paris Saint-Germain and the France national team.</div>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-11.png" alt="">
+                    </div>
+                    <div class="player-profile">
+                        <div class="player-name">Kevin De Bruyne</div>
+                        <div class="player-details">Kevin De Bruyne is a Belgian professional footballer who plays as a
+                            midfielder for Manchester City, where he is vice-captain, and the Belgium national team.
+                        </div>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-4.png" alt="">
+                    </div>
+                    <div class="player-profile">
+                        <div class="player-name">Paulo Dybala</div>
+                        <div class="player-details">Paulo Exequiel Dybala is an Argentine professional footballer who
+                            plays as a forward for Serie A club Juventus and the Argentina national team.</div>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-7.png" alt="">
+                    </div>
+                    <div class="player-profile">
+                        <div class="player-name">Di Maria</div>
+                        <div class="player-details">Ángel Fabián Di María is an Argentine professional footballer who
+                            plays for PSG and the Argentina national team. He can play as either a
+                            winger or attacking midfielder</div>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-5.png" alt="">
+                    </div>
+                    <div class="player-profile">
+                        <div class="player-name">Mesut Ozil</div>
+                        <div class="player-details">Mesut Özil is a German professional footballer who plays as an
+                            attacking midfielder for Süper Lig club Fenerbahçe. Nicknamed "The Assist King", </div>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-9.png" alt="">
+                    </div>
+                    <div class="player-profile">
+                        <div class="player-name">Mohammed Salah</div>
+                        <div class="player-details">Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional
+                            footballer who plays as a forward for Liverpool and captains the Egypt national team.</div>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-12.png" alt="">
+                    </div>
+                    <div class="player-profile">
+                        <div class="player-name">Philippe Coutinho</div>
+                        <div class="player-details">Philippe Coutinho Correia is a Brazilian professional footballer who
+                            plays as an attacking midfielder or winger for FCB and the Brazil national team.</div>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-10.png" alt="">
+                    </div>
+                    <div class="player-profile">
+                        <div class="player-name">Harry Kane</div>
+                        <div class="player-details">Harry Edward Kane MBE is an English professional footballer who
+                            plays as a striker for Tottenham Hotspur and captains the England national team.</div>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-image">
+                        <img src="images/players/player-6.png" alt="">
+                    </div>
+                    <div class="player-profile">
+                        <div class="player-name">Mauro Icardi</div>
+                        <div class="player-details">Mauro Emanuel Icardi is an Argentine professional footballer who
+                            plays as a striker for Ligue 1 club Paris Saint-Germain and the Argentina national team.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+    </main>
+
 </body>
 
 </html>
