--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             ---------------------->
 
         <!---------------------------
-             Player section starts
+             Players section starts
         --------------------------->
         <section class="players-section">
             <div class="players">
@@ -204,7 +204,120 @@
                 </div>
             </div>
         </section>
+        <!-- Players section end
+            ---------------------->
 
+        <!-----------------------------------
+            Highlights section starts 
+            ------------------------------->
+        <section class="highlights-section fixed-width">
+            <div class="highlights-content">
+                <h2>All Highlights</h2>
+                <h2>Copa America 2021</h2>
+
+                <p>Lionel Scaloni’s lifted the oldest national team title in the world with an unbeaten run which
+                    included 5 wins and 2 draws (including the 1-1 draw to Colombia with Argentina winning the penalty
+                    shootout).</p>
+                <div class="btn">
+                    <div class="banner-btn">
+                        <a href="#" class="btn-text">Watch Now</a>
+                        <div class="-icon">
+                            <i class="fas fa-arrow-right"></i>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="highlights-image">
+                <img src="images/match.png" alt="">
+            </div>
+        </section>
+        <!---------------------------
+             Article Section starts 
+             ------------------------------>
+
+        <section class="article-section">
+            <div class="latest-news fixed-width">
+                <h1 class="section-title">Latest News</h1>
+                <div class="news">
+
+                    <article class="news-item">
+                        <div class="news-item-thumbnail">
+                            <img src="images/copa-america/img-1.jpg" alt="">
+                        </div>
+                        <div class="news-item-info">
+                            <h2 class="news-item-title">Lionel Messi wins his first international trophy</h2>
+                            <p class="news-item-author">By <a href="#">Parth Dhall</a></p>
+                        </div>
+                    </article>
+
+                    <article class="news-item">
+                        <div class="news-item-thumbnail">
+                            <img src="images/copa-america/img-2.jpg" alt="">
+                        </div>
+                        <div class="news-item-info">
+                            <h2 class="news-item-title">Lionel Messi carries Argentina to victory in Copa America final
+                            </h2>
+                            <p class="news-item-author">By <a href="#">Carl de souza</a></p>
+                        </div>
+                    </article>
+
+                    <article class="news-item">
+                        <div class="news-item-thumbnail">
+                            <img src="images/copa-america/img-3.jpg" alt="">
+                        </div>
+                        <div class="news-item-info">
+                            <h2 class="news-item-title">Messi shares winning moments with family over a video call</h2>
+                            <p class="news-item-author">By <a href="#">Rajdeep Saha</a></p>
+                        </div>
+                    </article>
+
+                    <article class="news-item">
+                        <div class="news-item-thumbnail">
+                            <img src="images/copa-america/img-4.jpg" alt="">
+                        </div>
+                        <div class="news-item-info">
+                            <h2 class="news-item-title">Neymar's Brazil Stands in Messi & Argentina's Way to Silverware
+                            </h2>
+                            <p class="news-item-author">By <a href="#">Abhimanyu Sen</a></p>
+                        </div>
+                    </article>
+
+                </div>
+            </div>
+        </section>
+
+        <!----------------------------
+             Partners section starts 
+             -------------------------->
+        <section class="partner-section">
+            <div class="partners fixed-width">
+                <h2>Our Partners</h2>
+                <div class="partners-images">
+                    <img src="images/our-partners/partner-1.jpg" alt="">
+                    <img src="images/our-partners/partner-2.jpg" alt="">
+                    <img src="images/our-partners/partner-3.jpg" alt="">
+                </div>
+            </div>
+        </section>
+
+        <!-- -----------------------
+            Footer section starts
+            ----------------------- -->
+        <footer class="footer-section footer-width">
+            <div class="footer-logo">
+                <img src="images/Logo.png" alt="">
+            </div>
+            <div class="footer-social-icon">
+                <a href=""><i class="fab fa-facebook-square"></i></a>
+                <a href=""><i class="fab fa-instagram-square"></i></a>
+                <a href=""><i class="fab fa-twitter-square"></i></a>
+                <a href=""><i class="fab fa-youtube-square"></i></a>
+            </div>
+            <div class="footer-copyright">
+                <p>Copyright &copy; 2022 Football</p>
+            </div>
+        </footer>
 
     </main>
 
