--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             ---------------------->
         <header>
             <nav class="menu fixed-width">
+
                 <div class="menu-items">
                     <ul>
                         <li><a href="#">Home</a></li>
@@ -28,35 +29,41 @@
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
+
                 <div class="btn">
                     <div class="login-btn">
                         <div class="btn-icon">
                             <i class="fas fa-sign-in-alt"></i>
-
                         </div>
                         <a href="#" class="btn-text">Login</a>
                     </div>
                 </div>
-            </nav>
 
-            <!--------------------------
+            </nav>
+        </header>
+        <!--------------------------
                  Banner section starts 
                 ------------------------>
+        <div class="banner-section">
 
-            <div class="banner">
+            <div class="banner fixed-width">
+
                 <div class="banner-details">
                     <h1>Conmebol</h1>
                     <h1>Copa America</h1>
                     <h1>2021</h1>
 
                     <div class="btn">
+
                         <div class="banner-btn">
                             <a href="#" class="btn-text">Watch Live</a>
+
                             <div class="-icon">
                                 <i class="fas fa-arrow-right"></i>
                             </div>
 
                         </div>
+
                     </div>
 
                 </div>
@@ -64,10 +71,14 @@
                 <div class="banner-image">
                     <img src="images/banner.png" alt="">
                 </div>
+
             </div>
-            <!-- Banner Section end 
+
+        </div>
+
+        <!-- Banner Section end 
                 ----------------------->
-        </header>
+
         <!-- Header section end
             ---------------------->
 
@@ -76,6 +87,7 @@
         --------------------------->
         <section class="players-section">
             <div class="players">
+
                 <div class="player">
                     <div class="player-image">
                         <img src="images/players/player-2.png" alt="">
@@ -87,6 +99,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="player">
                     <div class="player-image">
                         <img src="images/players/player-3.png" alt="">
@@ -98,6 +111,7 @@
                             Portugal national team.</div>
                     </div>
                 </div>
+
                 <div class="player">
                     <div class="player-image">
                         <img src="images/players/player-1.png" alt="">
@@ -109,6 +123,7 @@
                             Brazil national team.</div>
                     </div>
                 </div>
+
                 <div class="player">
                     <div class="player-image">
                         <img src="images/players/player-8.png" alt="">
@@ -119,6 +134,7 @@
                             as a forward for Ligue 1 club Paris Saint-Germain and the France national team.</div>
                     </div>
                 </div>
+
                 <div class="player">
                     <div class="player-image">
                         <img src="images/players/player-11.png" alt="">
@@ -130,6 +146,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="player">
                     <div class="player-image">
                         <img src="images/players/player-4.png" alt="">
@@ -140,6 +157,7 @@
                             plays as a forward for Serie A club Juventus and the Argentina national team.</div>
                     </div>
                 </div>
+
                 <div class="player">
                     <div class="player-image">
                         <img src="images/players/player-7.png" alt="">
@@ -151,6 +169,7 @@
                             winger or attacking midfielder</div>
                     </div>
                 </div>
+
                 <div class="player">
                     <div class="player-image">
                         <img src="images/players/player-5.png" alt="">
@@ -161,6 +180,7 @@
                             attacking midfielder for Süper Lig club Fenerbahçe. Nicknamed "The Assist King", </div>
                     </div>
                 </div>
+
                 <div class="player">
                     <div class="player-image">
                         <img src="images/players/player-9.png" alt="">
@@ -171,6 +191,7 @@
                             footballer who plays as a forward for Liverpool and captains the Egypt national team.</div>
                     </div>
                 </div>
+
                 <div class="player">
                     <div class="player-image">
                         <img src="images/players/player-12.png" alt="">
@@ -181,6 +202,7 @@
                             plays as an attacking midfielder or winger for FCB and the Brazil national team.</div>
                     </div>
                 </div>
+
                 <div class="player">
                     <div class="player-image">
                         <img src="images/players/player-10.png" alt="">
@@ -191,6 +213,7 @@
                             plays as a striker for Tottenham Hotspur and captains the England national team.</div>
                     </div>
                 </div>
+
                 <div class="player">
                     <div class="player-image">
                         <img src="images/players/player-6.png" alt="">
@@ -202,6 +225,7 @@
                         </div>
                     </div>
                 </div>
+
             </div>
         </section>
         <!-- Players section end
@@ -305,18 +329,22 @@
             Footer section starts
             ----------------------- -->
         <footer class="footer-section footer-width">
+
             <div class="footer-logo">
                 <img src="images/Logo.png" alt="">
             </div>
+
             <div class="footer-social-icon">
                 <a href=""><i class="fab fa-facebook-square"></i></a>
                 <a href=""><i class="fab fa-instagram-square"></i></a>
                 <a href=""><i class="fab fa-twitter-square"></i></a>
                 <a href=""><i class="fab fa-youtube-square"></i></a>
             </div>
+
             <div class="footer-copyright">
                 <p>Copyright &copy; 2022 Football</p>
             </div>
+
         </footer>
 
     </main>
